@@ -3,7 +3,7 @@ dnl Process this file with autoconf to produce a configure script.
 dnl init
 
 AC_PREREQ(2.57)
-AC_REVISION([$NiH: configure.ac,v 1.10 2003/01/22 15:33:59 wiz Exp $])
+AC_REVISION([$NiH: configure.ac,v 1.11 2003/01/22 16:54:48 wiz Exp $])
 AC_INIT([dccserver],[0.2],[tk@giga.or.at])
 AC_CONFIG_SRCDIR([dccserver.c])
 AC_CONFIG_HEADERS([config.h])
@@ -26,6 +26,8 @@ dnl library functions
 
 dnl AC_REPLACE_FUNCS(getopt_long)
 AC_REPLACE_FUNCS([err strlcpy warn warnx])
+
+AC_CHECK_FUNCS([seteuid])
 
 dnl types
 
